--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="pt-br"></html>
+>head> 
+    <meta charset="UTF-8">
+    <title>neymar </title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <p> Neymar da Silva Santos Júnior é um futebolista brasileiro que atua como atacante. Atualmente joga pelo Al-Hilal e pela Seleção Brasileira masculina. É considerado o principal futebolista brasileiro da atualidade e um dos melhores do mundo, sendo o maior artilheiro da Seleção Brasileira. Wikipédia
+    Nascimento: 5 de fevereiro de 1992 (idade 31 anos), Mogi das Cruzes, São Paulo
+    Equipes atuais: Al-Hilal Saudi Football Club (#10 / Atacante), Seleção Brasileira (#10 / Atacante), Brazil
+    Salário: 40,8 milhões GBP (2022)
+    Datas de entrada: 2023 (Al-Hilal Saudi Football Club), MAIS
+    Irmãs: Rafaella Santos
+    Medalha de ouro: Futebol nos Jogos Olímpicos de Verão de 2016 - Masculino
+    Altura: 1,75 m
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
