--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-
-<html lang="pt-br" </html>
+<html>
+    <html lang="pt-br" </html>
 
 <head> 
     <meta charset="UTF-8">
@@ -11,6 +11,8 @@
 <body>
     <h1> neymar </h1>
    <p>Neymar da Silva Santos Júnior é um futebolista brasileiro que atua como atacante. Atualmente joga pelo Al-Hilal e pela Seleção Brasileira masculina É considerado o principal futebolista brasileiro da atualidade e um dos melhores do mundo, sendo o maior artilheiro da Seleção Brasileira</p>
+
+</html>
 
 
 
