--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head> 
     <meta charset="UTF-8">
-    <title>neymar </title>
+    <title> Neymar </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
