--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1> neymar </h1>
+    <h1> Neymar </h1>
 
     <p> Neymar da Silva Santos Júnior é um futebolista brasileiro que atua como atacante. Atualmente joga pelo Al-Hilal e pela Seleção Brasileira masculina.</p>
 
